[package]
name = "bevy-debug-text-overlay"
authors = ["Nicola Papale"]
description = "A convenient on-screen message print macro for bevy"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["bevy", "debug", "overlay", "message"]
categories = ["game-development", "development-tools"]
repository = "https://github.com/nicopap/bevy-debug-text-overlay"
version = "7.0.0"
edition = "2021"

[features]
debug = ["lazy_static", "bevy/bevy_render", "bevy/bevy_asset", "bevy/bevy_ui", "bevy/bevy_text", "bevy/bevy_core_pipeline"]
builtin-font = ["bevy/default_font"]
default = ["debug", "builtin-font"]

[dependencies]
bevy = { version = "0.12", default-features = false }
lazy_static = { version = "1.4", optional = true }

[dev-dependencies]
bevy = { version = "0.12", default-features = false, features = [
  "bevy_render", "x11", "bevy_core_pipeline", "bevy_asset", "bevy_sprite"
] }
# bevy-inspector-egui = { version = "0.8" }

[package.metadata.release]
pre-release-replacements = [
  {search="\\| 0.12 \\| [0-9.]* \\|",replace="| 0.12 | {{version}} |",file="Readme.md"},
  {search="bevy-debug-text-overlay = \\{ version = \"[0-9.]*\"",replace="bevy-debug-text-overlay = { version = \"{{version}}\"",file="Readme.md"},
  {search="bevy-debug-text-overlay = \"[0-9.]*\"",replace="bevy-debug-text-overlay = \"{{version}}\"",file="Readme.md"},
]
