[package]
name = "bevy-debug-text-overlay"
authors = ["Nicola Papale"]
description = "A convenient on-screen message print macro for bevy"
license = "Apache-2.0"
readme = "Readme.md"
keywords = ["bevy", "debug", "overlay", "message"]
categories = ["game-development", "development-tools"]
repository = "https://github.com/nicopap/bevy-debug-text-overlay"
version = "8.0.0"
edition = "2021"

[features]
default = ["debug"]
debug = ["bevy/bevy_render", "bevy/bevy_asset", "bevy/bevy_ui", "bevy/bevy_text", "bevy/bevy_core_pipeline", "bevy/default_font"]

[dependencies]
bevy = { version = "0.13", default-features = false }

[dev-dependencies]
bevy = { version = "0.13", default-features = false, features = [
  "bevy_render", "x11", "bevy_core_pipeline", "bevy_asset", "bevy_sprite"
] }
# bevy-inspector-egui = { version = "0.8" }

[package.metadata.release]
pre-release-replacements = [
  {search="\\| 0.13 \\| [0-9.]* \\|",replace="| 0.13 | {{version}} |",file="Readme.md"},
  {search="bevy-debug-text-overlay = \\{ version = \"[0-9.]*\"",replace="bevy-debug-text-overlay = { version = \"{{version}}\"",file="Readme.md"},
  {search="bevy-debug-text-overlay = \"[0-9.]*\"",replace="bevy-debug-text-overlay = \"{{version}}\"",file="Readme.md"},
]
